@@ -1694,6 +1694,20 @@ void WebViewImpl::setSelectionColors(unsigned activeBackgroundColor,
 #endif
 }
 
+void WebViewImpl::addUserScript(const WebString& sourceCode, bool runAtStart)
+{
+    PageGroup* pageGroup = PageGroup::pageGroup(pageGroupName);
+    RefPtr<DOMWrapperWorld> world(DOMWrapperWorld::create());
+    pageGroup->addUserScriptToWorld(world.get(), sourceCode, WebURL(), 0, 0,
+                                    runAtStart ? InjectAtDocumentStart : InjectAtDocumentEnd);
+}
+
+void WebViewImpl::removeAllUserContent()
+{
+    PageGroup* pageGroup = PageGroup::pageGroup(pageGroupName);
+    pageGroup->removeAllUserContent();
+}
+
 void WebViewImpl::didCommitLoad(bool* isNewNavigation)
 {
     if (isNewNavigation)
